--- a/xim.config.json
+++ b/xim.config.json
@@ -1,1 +1,1 @@
-{"shells": {"HTTP_PROXY": false, "pip": false, "npm": false, "git": false}, "already_set": "school"}
+{"shells": {"HTTP_PROXY": false, "pip": false, "npm": false, "git": false}, "already_set": "free"}
